Dep updates - fix for letter spacing var

--- a/app/scss/config/vars/_type.scss
+++ b/app/scss/config/vars/_type.scss
@@ -38,7 +38,7 @@ $type-jumbo: 24px;
 // TYPE LETTER SPACING
 // -----------------------------------------------------------------|
 $type-space-tightest: -.1em;
-$type-space-righter: -.05em;
+$type-space-tighter: -.05em;
 $type-space-tight: -.025em;
 $type-space-normal: 0;
 $type-space-loose: .025em;
